# linux_build_text

./: CMakeLists.txt  XX_Test.sln
GameServer/: CMakeLists.txt  GameServer.vcxproj  config.xml  main.cpp
